--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
 	"name": "svelte-dark-theme",
 	"version": "0.0.1",
+	"description": "Dark theme store for Svelte.",
+	"type": "module",
+	"license": "MIT",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "svelte-kit sync && svelte-package",
@@ -23,6 +26,5 @@
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
 		"vite": "^3.1.0"
-	},
-	"type": "module"
+	}
 }
