--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
 	"description": "Dark theme store for Svelte.",
 	"type": "module",
 	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/Gentiana-svb/svelte-dark-theme.git"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "svelte-kit sync && svelte-package",
